# weather-mcp-system

./: .env  .env.example  README.md  pyproject.toml
Documents/: Architecture.mmd  DataFlowDiagram.mmd  ErrorHandlingDiagram.mmd  RuntimeSequenceDiagram.mmd  workflowDiagram.mmd
client/: __init__.py  __main__.py  llm.py  main.py  mcp.py  orchestrator.py
weather_mcp/: __init__.py  __main__.py  main.py  server.py
weather_mcp/config/: settings.py
weather_mcp/services/: __init__.py  openweather.py
weather_mcp/tools/: __init__.py  weather.py
